# RichSpot

./: .gitignore  README.org  pyproject.toml  richspot.py
